--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Portfolio</strong> by Emmanuel Seyi Adeyera</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="mailto:adeyeraseyi@gmail.com" class="icon brands fa-google icon"><span class="label">gmail</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
