--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 									<ul class="icons">
 										<li><a href="mailto:adeyeraseyi@gmail.com" class="icon brands fa-google icon"><span class="label">gmail</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
+									
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
@@ -223,19 +223,19 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>I'm currently open to collaborations and freelance projects. If you have any hiring oppurtunities also, do not hesitate to reach out</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="#">adeyeraseyi@gmail.com</a></li>
+										<li class="icon solid fa-phone">(+44)7471706480</li>
+										<li class="icon solid fa-home">Manchester, United Kingdom<br />
+										</li>
 									</ul>
 								</section>
 
-							<!-- Footer -->
+							<!-- Footer
 								<footer id="footer">
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
+								</footer> -->
 
 						</div>
 					</div>
