--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE HTML>
 <!--
 	Editorial by HTML5 UP
 	html5up.net | @ajlkn
@@ -26,113 +25,115 @@
 									<a href="index.html" class="logo"><strong>Portfolio</strong> by Emmanuel Seyi Adeyera</a>
 									<ul class="icons">
 										<li><a href="mailto:adeyeraseyi@gmail.com" class="icon brands fa-google icon"><span class="label">gmail</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+												<li class="icon solid fa-phone">(+44)7471706480</li>
+										<li class="icon solid fa-home">Manchester, United Kingdom<br />
+										</li>
+										<li><a href="https://www.linkedin.com/in/emmanueladeyera" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+										
 									</ul>
 								</header>
 
-							<!-- Banner -->
-								<section id="banner">
-									<div class="content">
-										<header>
-											<h1>Hi, my name is Emmanuel Seyi Adeyera<br />
-											</h1>
-											<p>A  SIMPLE Portfolio WEBSITE I DESIGNED</p>
-										</header>
-										<p>I'm an aspiring Data Analsyt who uses Excel, SQL, Python, Tableau, Power BI and Google Spreadsheet to analyze and wrangle data</p>
-										<ul class="actions">
-											<li><a href="https://www.linkedin.com/in/emmanueladeyera/" class="button big">VIEW MY LINKEDIN</a></li>
-										</ul>
-									</div>
-									<span class="image object">
-										<img src="images/pic10.png" alt="" />
-									</span>
-								</section>
+<!-- Banner -->
+<section id="banner">
+	<div class="content">
+		<header>
+			<h1>Hi, my name is Emmanuel Seyi Adeyera<br />
+			</h1>
+			<p>A  SIMPLE Portfolio WEBSITE I DESIGNED</p>
+		</header>
+		<p>I'm an aspiring Data Analsyt who uses Excel, SQL, Python, Tableau, Power BI and Google Spreadsheet to analyze and wrangle data. I'm currently open to collaborations and freelance projects. If you have any hiring oppurtunities also, do not hesitate to reach out</p>
+		<ul class="actions">
+			<li><a href="https://www.linkedin.com/in/emmanueladeyera/" class="button big">VIEW MY LINKEDIN</a></li>
+		</ul>
+	</div>
+	<span class="image object">
+		<img src="images/pic10.png" alt="" />
+	</span>
+</section>
 
-							<!-- Section -->
-								<!-- <section>
-									<header class="major">
-										<h2>Erat lacinia</h2>
-									</header>
-									<div class="features">
-										<article>
-											<span class="icon fa-gem"></span>
-											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-paper-plane"></span>
-											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-rocket"></span>
-											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-signal"></span>
-											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-									</div>
-								</section> -->
+<!-- Section -->
+<!-- <section>
+	<header class="major">
+		<h2>Erat lacinia</h2>
+	</header>
+	<div class="features">
+		<article>
+			<span class="icon fa-gem"></span>
+			<div class="content">
+				<h3>Portitor ullamcorper</h3>
+				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+			</div>
+		</article>
+		<article>
+			<span class="icon solid fa-paper-plane"></span>
+			<div class="content">
+				<h3>Sapien veroeros</h3>
+				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+			</div>
+		</article>
+		<article>
+			<span class="icon solid fa-rocket"></span>
+			<div class="content">
+				<h3>Quam lorem ipsum</h3>
+				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+			</div>
+		</article>
+		<article>
+			<span class="icon solid fa-signal"></span>
+			<div class="content">
+				<h3>Sed magna finibus</h3>
+				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+			</div>
+		</article>
+	</div>
+</section> -->
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>ALL PROJECTS</h2>
-									</header>
-									<div class="posts">
-										<article>
-											<a href="https://github.com/sheyikvngjr/FAKE-NEWS-DETECTION-USING-MACHINE-LEARNING/blob/main/SEYI_Fake%20news_detection.ipynb" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>FAKE NEWS DETECTION USING PASSIVE CLASSIFIER</h3>
-											<p>Using Jupyer NoteBook, I built a TFIDFVECTORIZER on my dataset. Then initialize a passive aggressive classifier and fit the model, I also compare all other classifiers to see the best accuracy. In the end the accuracy score and  confusion matrix tell us how well our model fares </p>
-											<ul class="actions">
-												<li><a href="https://github.com/sheyikvngjr/FAKE-NEWS-DETECTION-USING-MACHINE-LEARNING/blob/main/SEYI_Fake%20news_detection.ipynb" class="button">VIEW PROJECT</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/KMSSALESDASHBOARD/Dashboard1" class="image"><img src="images/pic02.png" alt="" /></a>
-											<h3>KMS SUPERSTORE DATASET USE OF TABLEAU</h3>
-											<p>This is a sample of my Tableau dashboard created during bootcamp with lighthall.co bootcamp</p>
-											<ul class="actions">
-												<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/KMSSALESDASHBOARD/Dashboard1" class="button">View my project</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/SalesDashboard_16746537586560/Dashboard1" class="image"><img src="images/pic03.png" alt="" /></a>
-											<h3>SALES DASHBOARD WITH THE USE OF TABLEAU</h3>
-											<p>This is a sample of my Tableau dashboard created during bootcamp with lighthall.co bootcamp</p>
-											<ul class="actions">
-												<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/SalesDashboard_16746537586560/Dashboard1" class="button">View my project</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="https://www.novypro.com/project/kms-dashboard" class="image"><img src="images/pic04.png" alt="" /></a>
-											<h3>KMS SALE DASHBOARD WITH THE USE OF POWERBI</h3>
-											<p> This is a sample of my Power BI dashboard created during bootcamp with lighthall.co bootcamp</p>
-											<ul class="actions">
-												<li><a href="https://www.novypro.com/project/kms-dashboard" class="button">VIEW MY PROJECT</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="https://www.novypro.com/project/1676046815900x149549167478910000" class="image"><img src="images/pic05.png" alt="" /></a>
-											<h3>TATA ONLINE RETAIL WITH USE OF POWERBI</h3>
-											<p>This is a PowerBI dashboard I created using the dataset for Tata online sales, showing information/insights that would be helpful in guiding future sales.</p>
-											<ul class="actions">
-												<li><a href="https://www.novypro.com/project/1676046815900x149549167478910000" class="button">More</a></li>
-											</ul>
+<!-- Section -->
+<section>
+	<header class="major">
+		<h2>ALL PROJECTS</h2>
+	</header>
+	<div class="posts">
+		<article>
+			<a href="https://github.com/sheyikvngjr/FAKE-NEWS-DETECTION-USING-MACHINE-LEARNING/blob/main/SEYI_Fake%20news_detection.ipynb" class="image"><img src="images/pic01.jpg" alt="" /></a>
+			<h3>FAKE NEWS DETECTION USING PASSIVE CLASSIFIER</h3>
+			<p>Using Jupyer NoteBook, I built a TFIDFVECTORIZER on my dataset. Then initialize a passive aggressive classifier and fit the model, I also compare all other classifiers to see the best accuracy. In the end the accuracy score and  confusion matrix tell us how well our model fares </p>
+			<ul class="actions">
+				<li><a href="https://github.com/sheyikvngjr/FAKE-NEWS-DETECTION-USING-MACHINE-LEARNING/blob/main/SEYI_Fake%20news_detection.ipynb" class="button">VIEW PROJECT</a></li>
+			</ul>
+		</article>
+		<article>
+			<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/KMSSALESDASHBOARD/Dashboard1" class="image"><img src="images/pic02.png" alt="" /></a>
+			<h3>KMS SUPERSTORE DATASET USE OF TABLEAU</h3>
+			<p>This is a sample of my Tableau dashboard created during bootcamp with lighthall.co bootcamp</p>
+			<ul class="actions">
+				<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/KMSSALESDASHBOARD/Dashboard1" class="button">View my project</a></li>
+			</ul>
+		</article>
+		<article>
+			<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/SalesDashboard_16746537586560/Dashboard1" class="image"><img src="images/pic03.png" alt="" /></a>
+			<h3>SALES DASHBOARD WITH THE USE OF TABLEAU</h3>
+			<p>This is a sample of my Tableau dashboard created during bootcamp with lighthall.co bootcamp</p>
+			<ul class="actions">
+				<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/SalesDashboard_16746537586560/Dashboard1" class="button">View my project</a></li>
+			</ul>
+		</article>
+		<article>
+			<a href="https://www.novypro.com/project/kms-dashboard" class="image"><img src="images/pic04.png" alt="" /></a>
+			<h3>KMS SALE DASHBOARD WITH THE USE OF POWERBI</h3>
+			<p> This is a sample of my Power BI dashboard created during bootcamp with lighthall.co bootcamp</p>
+			<ul class="actions">
+				<li><a href="https://www.novypro.com/project/kms-dashboard" class="button">VIEW MY PROJECT</a></li>
+			</ul>
+		</article>
+		<article>
+			<a href="https://www.novypro.com/project/1676046815900x149549167478910000" class="image"><img src="images/pic05.png" alt="" /></a>
+			<h3>TATA ONLINE RETAIL WITH USE OF POWERBI</h3>
+			<p>This is a PowerBI dashboard I created using the dataset for Tata online sales, showing information/insights that would be helpful in guiding future sales.</p>
+			<ul class="actions">
+				<li><a href="https://www.novypro.com/project/1676046815900x149549167478910000" class="button">More</a></li>
+			</ul>
 										</article>
 										<!-- <article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
@@ -142,7 +143,7 @@
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article> -->
-									<!-- </div> -->
+									</div>
 								</section>
 
 						</div>
@@ -166,17 +167,17 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
-										<li>
-											<span class="opener">Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
+										<li><a href="generic.html">About me</a></li>
+										<li><a href="elements.html">Resumes</a></li>
+										<!-- <li>
+											<span class="opener">Submenu</span>x
+											<ul> -->
+												<!-- <li><a href="#">Lorem Dolor</a></li>
 												<li><a href="#">Ipsum Adipiscing</a></li>
 												<li><a href="#">Tempus Magna</a></li>
 												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
+											</ul> -->
+										<!-- </li>
 										<li><a href="#">Etiam Dolore</a></li>
 										<li><a href="#">Adipiscing</a></li>
 										<li>
@@ -186,40 +187,40 @@
 												<li><a href="#">Ipsum Adipiscing</a></li>
 												<li><a href="#">Tempus Magna</a></li>
 												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
+											</ul> -->
+										<!-- </li>
 										<li><a href="#">Maximus Erat</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
 										<li><a href="#">Amet Lacinia</a></li>
-									</ul>
+									</ul> -->
 								</nav>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ante interdum</h2>
+										<!-- <h2>Ante interdum</h2> -->
 									</header>
 									<div class="mini-posts">
-										<article>
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
+										</article> -->
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
+										</article> -->
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
+										</article> -->
+									<!-- </div>
 									<ul class="actions">
 										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
+									</ul> -->
+								<!-- </section> -->
 
 							<!-- Section -->
-								<section>
+								<!-- <section> -->
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
@@ -228,14 +229,14 @@
 										<li class="icon solid fa-envelope"><a href="#">adeyeraseyi@gmail.com</a></li>
 										<li class="icon solid fa-phone">(+44)7471706480</li>
 										<li class="icon solid fa-home">Manchester, United Kingdom<br />
-										</li>
+									</li>
 									</ul>
 								</section>
 
-							<!-- Footer
+							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer> -->
+									<p class="copyright">&copy; Emmanuel Adeyera.  Design: Emmanuel Seyi Adeyera</p>
+								</footer>
 
 						</div>
 					</div>
