--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
 				<li><a href="https://www.novypro.com/project/1676046815900x149549167478910000" class="button">More</a></li>
 			</ul>
 										</article>
-										<!-- <article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+										<article>
+											<a href="https://www.novypro.com/project/power-bi-82" class="image"><img src="images/pic06.png" alt="" /></a>
+											<h3>IMDB DATA FROM 2006 TO 2016 DASHBOARD</h3>
+											<p>I attempted to verify the cleanliness of our data, and subsequently imported it into Power BI. I also utilized DAX functions to establish new measures for Total Revenue and Total Votes. Finally, I employed suitable charts to visualize all of our data.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://www.novypro.com/project/power-bi-82" class="button">More</a></li>
 											</ul>
-										</article> -->
+										</article>
 									</div>
 								</section>
 
