--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
 												<li><a href="https://www.novypro.com/project/power-bi-82" class="button">More</a></li>
 											</ul>
 										</article>
+									</article>
+									<article>
+										<a href="https://www.novypro.com/project/powerbi-28" class="image"><img src="images/R.jpg" alt="" /></a>
+										<h3>PWC CALL CENTER TREND ANALYSIS DASHBOARD </h3>
+										<p> </p>
+										<ul class="actions">
+											<li><a href="https://www.novypro.com/project/powerbi-28" class="button">More</a></li>
+										</ul>
+									</article>
 									</div>
 								</section>
 
