--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			<h3>KMS SALE DASHBOARD WITH THE USE OF POWERBI</h3>
 			<p> This is a sample of my Power BI dashboard created during bootcamp with lighthall.co bootcamp</p>
 			<ul class="actions">
-				<li><a href="https://www.novypro.com/project/kms-dashboard" class="button">VIEW MY PROJECT</a></li>
+				<li><a href="https://www.novypro.com/project/kms-dashboard" class="button">View my project</a></li>
 			</ul>
 		</article>
 		<article>
@@ -132,7 +132,7 @@
 			<h3>TATA ONLINE RETAIL WITH USE OF POWERBI</h3>
 			<p>This is a PowerBI dashboard I created using the dataset for Tata online sales, showing information/insights that would be helpful in guiding future sales.</p>
 			<ul class="actions">
-				<li><a href="https://www.novypro.com/project/1676046815900x149549167478910000" class="button">More</a></li>
+				<li><a href="https://www.novypro.com/project/1676046815900x149549167478910000" class="button">View my project</a></li>
 			</ul>
 										</article>
 										<article>
@@ -140,7 +140,7 @@
 											<h3>IMDB DATA FROM 2006 TO 2016 DASHBOARD</h3>
 											<p>I attempted to verify the cleanliness of our data, and subsequently imported it into Power BI. I also utilized DAX functions to establish new measures for Total Revenue and Total Votes. Finally, I employed suitable charts to visualize all of our data.</p>
 											<ul class="actions">
-												<li><a href="https://www.novypro.com/project/power-bi-82" class="button">More</a></li>
+												<li><a href="https://www.novypro.com/project/power-bi-82" class="button">View my project</a></li>
 											</ul>
 										</article>
 									</article>
@@ -149,7 +149,15 @@
 										<h3>PWC CALL CENTER TREND ANALYSIS DASHBOARD </h3>
 										<p> </p>
 										<ul class="actions">
-											<li><a href="https://www.novypro.com/project/powerbi-28" class="button">More</a></li>
+											<li><a href="https://www.novypro.com/project/powerbi-28" class="button">View my project</a></li>
+										</ul>
+									</article>
+									<article>
+										<a href="https://www.novypro.com/project/netflix-5" class="image"><img src="images/p.jpg" alt="" /></a>
+										<h3>NETFLIX MOVIE DASHBOARD </h3>
+										<p>I retrieved a dataset from Kaggle, imported it into Power BI, and then performed data transformation and cleaning to address any data inconsistencies. Afterwards, I extracted the delimiter from the relevant data and utilized various DAX functions to achieve this. Finally, I created a suitable chart to effectively visualize the data. </p>
+										<ul class="actions">
+											<li><a href="https://www.novypro.com/project/netflix-5" class="button">View my project</a></li>
 										</ul>
 									</article>
 									</div>
