--- a/index.html
+++ b/index.html
@@ -160,6 +160,22 @@
 											<li><a href="https://www.novypro.com/project/netflix-5" class="button">View my project</a></li>
 										</ul>
 									</article>
+									<article>
+										<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/Amazon_16776967115470/Dashboard1" class="image"><img src="images/ama.png" alt="" /></a>
+										<h3>Covid Cases and Deaths WorldWide DASHBOARD </h3>
+										<p>I obtained the data from Kaggle website and discovered that it was unorganized. To clean the data, I utilized Python libraries in Jupyter notebook, and subsequently imported the cleaned data to Tableau for visualization purposes.. </p>
+										<ul class="actions">
+											<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/Amazon_16776967115470/Dashboard1" class="button">View my project</a></li>
+										</ul>
+									</article>
+									<article>
+										<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/CovidCasesandDeathsWorldWide/Dashboard1" class="image"><img src="images/c.png" alt="" /></a>
+										<h3>Covid Cases and Deaths WorldWide DASHBOARD </h3>
+										<p>I retrieved a dataset from Kaggle, imported it into tableau, and then performed data transformation and cleaning to address any data inconsistencies. </p>
+										<ul class="actions">
+											<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/CovidCasesandDeathsWorldWide/Dashboard1" class="button">View my project</a></li>
+										</ul>
+									</article>
 									</div>
 								</section>
 
