--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 									</article>
 									<article>
 										<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/Amazon_16776967115470/Dashboard1" class="image"><img src="images/ama.png" alt="" /></a>
-										<h3>Covid Cases and Deaths WorldWide DASHBOARD </h3>
+										<h3>Amazon Sales Dashboard </h3>
 										<p>I obtained the data from Kaggle website and discovered that it was unorganized. To clean the data, I utilized Python libraries in Jupyter notebook, and subsequently imported the cleaned data to Tableau for visualization purposes.. </p>
 										<ul class="actions">
 											<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/Amazon_16776967115470/Dashboard1" class="button">View my project</a></li>
