--- a/index.html
+++ b/index.html
@@ -95,12 +95,21 @@
 		<h2>ALL PROJECTS</h2>
 	</header>
 	<div class="posts">
+		
 		<article>
 			<a href="https://github.com/sheyikvngjr/FAKE-NEWS-DETECTION-USING-MACHINE-LEARNING/blob/main/SEYI_Fake%20news_detection.ipynb" class="image"><img src="images/pic01.jpg" alt="" /></a>
 			<h3>FAKE NEWS DETECTION USING PASSIVE CLASSIFIER</h3>
 			<p>Using Jupyer NoteBook, I built a TFIDFVECTORIZER on my dataset. Then initialize a passive aggressive classifier and fit the model, I also compare all other classifiers to see the best accuracy. In the end the accuracy score and  confusion matrix tell us how well our model fares </p>
 			<ul class="actions">
 				<li><a href="https://github.com/sheyikvngjr/FAKE-NEWS-DETECTION-USING-MACHINE-LEARNING/blob/main/SEYI_Fake%20news_detection.ipynb" class="button">VIEW PROJECT</a></li>
+			</ul>
+		</article>
+		<article>
+			<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/HRANALYTICSDASHBOARD_16777761413710/HRANALYTICSDASHBOARD" class="image"><img src="images/H.png" alt="" /></a>
+			<h3>HR ANALYTICS DASHBOARD</h3>
+			<p>I employed Tableau software to examine the HR dataset, generating multiple calculated columns utilizing various formulae. Additionally, I implemented a formula to set the bin size for my bar chart, enabling it to increase by one each time. To make it easily comprehensible to non-technical stakeholders, I utilized appropriate charts to visualize the data, which require no further explanations</p>
+			<ul class="actions">
+				<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/HRANALYTICSDASHBOARD_16777761413710/HRANALYTICSDASHBOARD" class="button">View my project</a></li>
 			</ul>
 		</article>
 		<article>
