--- a/index.html
+++ b/index.html
@@ -104,12 +104,21 @@
 				<li><a href="https://github.com/sheyikvngjr/FAKE-NEWS-DETECTION-USING-MACHINE-LEARNING/blob/main/SEYI_Fake%20news_detection.ipynb" class="button">VIEW PROJECT</a></li>
 			</ul>
 		</article>
+
 		<article>
 			<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/HRANALYTICSDASHBOARD_16777761413710/HRANALYTICSDASHBOARD" class="image"><img src="images/H.png" alt="" /></a>
 			<h3>HR ANALYTICS DASHBOARD</h3>
 			<p>I employed Tableau software to examine the HR dataset, generating multiple calculated columns utilizing various formulae. Additionally, I implemented a formula to set the bin size for my bar chart, enabling it to increase by one each time. To make it easily comprehensible to non-technical stakeholders, I utilized appropriate charts to visualize the data, which require no further explanations</p>
 			<ul class="actions">
 				<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/HRANALYTICSDASHBOARD_16777761413710/HRANALYTICSDASHBOARD" class="button">View my project</a></li>
+			</ul>
+		</article>
+		<article>
+			<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/NETFLIXDASHBOARD_16781289665870/Netflix?publish=yes" class="image"><img src="images/p.jpg" alt="" /></a>
+			<h3>NETFLIX DASHBOARD WITH THE USE OF TABLEAU</h3>
+			<p> I obtained the data from Kaggle website and imported it into Tableau. Subsequently, I generated distinct worksheets to visualize the data and had to create a dashboard to display these worksheets.</p>
+			<ul class="actions">
+				<li><a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/NETFLIXDASHBOARD_16781289665870/Netflix?publish=yes" class="button">VIEW PROJECT</a></li>
 			</ul>
 		</article>
 		<article>
@@ -163,7 +172,7 @@
 									</article>
 									<article>
 										<a href="https://www.novypro.com/project/netflix-5" class="image"><img src="images/p.jpg" alt="" /></a>
-										<h3>NETFLIX MOVIE DASHBOARD </h3>
+										<h3>NETFLIX MOVIE DASHBOARD WITH USE OF POWERBI </h3>
 										<p>I retrieved a dataset from Kaggle, imported it into Power BI, and then performed data transformation and cleaning to address any data inconsistencies. Afterwards, I extracted the delimiter from the relevant data and utilized various DAX functions to achieve this. Finally, I created a suitable chart to effectively visualize the data. </p>
 										<ul class="actions">
 											<li><a href="https://www.novypro.com/project/netflix-5" class="button">View my project</a></li>
