--- a/elements.html
+++ b/elements.html
@@ -82,8 +82,8 @@
 
 									<h2>Education</h2>
 									<p>
-										<strong>•Master of Science, DATA SCIENCE. University of Wolverhampton, United Kingdom 2022.</strong><br>
-										<strong>•Bachelor of Science, MANAGEMENT INFORMATION SYSTEM. Covenant University, Nigeria 2019.</strong><br>
+										<strong>•Master of Science, Data Science. University of Wolverhampton, United Kingdom 2022.</strong><br>
+										<strong>•Bachelor of Science, Management information system. Covenant University, Nigeria 2019.</strong><br>
 									  </p>
 									  <!-- Lists -->
 									  <h2>Skills</h2>
