--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
 		<h2>ALL PROJECTS</h2>
 	</header>
 	<div class="posts">
+		<article>
+			<a href="https://www.novypro.com/project/smoking-dataset-in-uk" class="image"><img src="images/pic011.jpg" alt="" /></a>
+			<h3>Smoking Dataset in UK</h3>
+			<p>The Power BI report focuses on the smoking dataset in the UK and utilizes various charts to visually represent the data. The dataset closely resembles the UK adult population to some extent. There is a slightly higher proportion of females compared to males within the sample. The majority of participants are married (48%) or single (25.35%). Education-wise, participants either have no formal qualifications (34.65%), have completed GSCE/0 level education (18.21%), or possess higher qualifications such as degrees (15.49%). The ethnic composition of the sample predominantly consists of White individuals (92%), exceeding the proportion reported in the 2021 Census (80%). A significant majority of the sample (three-quarters) does not engage in smoking behaviors, indicating an imbalance in this aspect. The collected sample provides valuable insights into the demographics and exhibits similarities to the UK adult population. The gender distribution suggests a modest gender imbalance, with slightly more females represented. Marital status reveals that a majority are married, followed by single individuals. The educational qualifications showcase a notable portion without formal qualifications, a significant percentage with GSCE/0 level education, and a considerable proportion with higher qualifications. The ethnic composition largely aligns with the White population. Notably, the distribution of smoking behaviors within the sample indicates a substantial majority of non-smokers. These insights underscore the importance of considering the sample composition when interpreting findings related to smoking behaviors. </p>
+			<ul class="actions">
+				<li><a href="https://www.novypro.com/project/smoking-dataset-in-uk" class="button">VIEW PROJECT</a></li>
+			</ul>
+		</article>
 		
 		<article>
 			<a href="https://github.com/sheyikvngjr/FAKE-NEWS-DETECTION-USING-MACHINE-LEARNING/blob/main/SEYI_Fake%20news_detection.ipynb" class="image"><img src="images/pic01.jpg" alt="" /></a>
