--- a/elements.html
+++ b/elements.html
@@ -49,10 +49,14 @@
 									<hr class="major" /> -->
 
 									<h2>Work Experience</h2>
-									<h3 id="content">Hi-Tech Plus - Data Coordinator  </h3>
+									<h3 id="content">Instantic Global - Data Coordinator  </h3>
 									<p>•	Established rapport and engaged with stakeholders to build lasting professional relationships.<br>
 										•	Identified, obtained, evaluated, and interpreted data from primary and secondary organizational sources while managing comprehensive databases and data gathering systems.<br>
-										•	Experience in providing technical support and troubleshooting for various hardware and software issues.<br>
+										•	Coordinated and managed data collection, analysis, and reporting processes.<br>
+										•	Developed and implemented data quality control measures to ensure accuracy and integrity.<br>
+										•	Collaborated with cross-functional teams to identify data needs and provide timely solutions<br>
+										•	Generated regular reports and dashboards to communicate key findings and insights.<br>
+										•	Streamlined data management workflows to optimize efficiency and reduce errors.<br>
 										•	Collaborated with programmers, engineers, and other executives to implement 25% increase in process efficiency, suggest system changes, and create plans and rules for data governance in accordance with General Data Protection Regulation Act<br>
 										•	Created an interactive report through cognitive data analysis used by stakeholders to evaluate trends.<br>
 										•	Worked closely with Quality assurance analysts to ensure the quality of data and structure and in accordance with the business need<br>
