--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</h1>
 			<p>A  SIMPLE Portfolio WEBSITE I DESIGNED</p>
 		</header>
-		<p>I'm an aspiring Data Analsyt who uses Excel, SQL, Python, Tableau, Power BI and Google Spreadsheet to analyze and wrangle data. I'm currently open to collaborations and freelance projects. If you have any hiring oppurtunities also, do not hesitate to reach out</p>
+		<p>Highly skilled and detail-oriented professional with a solid background as a Data Coordinator for 3 years and a Process Analyst for 2 years. Proficient in coordinating, organizing, and managing data to ensure accurate and efficient operations. Demonstrated expertise in analyzing business processes, identifying areas for improvement, and implementing effective solutions. Strong analytical and problem-solving abilities combined with excellent communication and collaboration skills. Proven track record of delivering exceptional results in fast-paced, deadline-driven environments. Committed to achieving operational excellence through data-driven insights and process optimization.</p>
 		<ul class="actions">
 			<li><a href="https://www.linkedin.com/in/emmanueladeyera/" class="button big">VIEW MY LINKEDIN</a></li>
 		</ul>
