--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
 	</header>
 	<div class="posts">
 		<article>
+			<a href="https://github.com/sheyikvngjr/EPL-2022-2023/blob/main/EPL%202022%202023%20(1).ipynb" class="image"><img src="images/QW.jpg" alt="" /></a>
+			<h3>EXPLORATORY ANALYSIS ON ENGLISH PREMIER LEAGUE 2022/2023 </h3>
+			<p> Step 1: Importing Necessary Libraries, Step 2: Loading the Dataset, Step 3: Exploratory Data Analysis (EDA), Step 4: Data Visualization, Step 5: Calculating Winning Percentages, Step 7: Winning and Losing Streaks, Step 8: Referee Analysis, Step 9: Creating a League Table, Step 10: Displaying the League Table 
+				 
+			 </p>
+			<ul class="actions">
+				<li><a href="https://github.com/sheyikvngjr/EPL-2022-2023/blob/main/EPL%202022%202023%20(1).ipynb" class="button">View my project</a></li>
+			</ul>
+		</article>
+		<article>
 			<a href="https://www.novypro.com/project/smoking-dataset-in-uk" class="image"><img src="images/pic011.jpg" alt="" /></a>
 			<h3>Smoking Dataset in UK</h3>
 			<p>The Power BI report focuses on the smoking dataset in the UK and utilizes various charts to visually represent the data. The dataset closely resembles the UK adult population to some extent. There is a slightly higher proportion of females compared to males within the sample. The majority of participants are married (48%) or single (25.35%). Education-wise, participants either have no formal qualifications (34.65%), have completed GSCE/0 level education (18.21%), or possess higher qualifications such as degrees (15.49%). The ethnic composition of the sample predominantly consists of White individuals (92%), exceeding the proportion reported in the 2021 Census (80%). A significant majority of the sample (three-quarters) does not engage in smoking behaviors, indicating an imbalance in this aspect. The collected sample provides valuable insights into the demographics and exhibits similarities to the UK adult population. The gender distribution suggests a modest gender imbalance, with slightly more females represented. Marital status reveals that a majority are married, followed by single individuals. The educational qualifications showcase a notable portion without formal qualifications, a significant percentage with GSCE/0 level education, and a considerable proportion with higher qualifications. The ethnic composition largely aligns with the White population. Notably, the distribution of smoking behaviors within the sample indicates a substantial majority of non-smokers. These insights underscore the importance of considering the sample composition when interpreting findings related to smoking behaviors. </p>
@@ -170,6 +180,9 @@
 											</ul>
 										</article>
 									</article>
+
+									
+
 									<article>
 										<a href="https://www.novypro.com/project/powerbi-28" class="image"><img src="images/R.jpg" alt="" /></a>
 										<h3>PWC CALL CENTER TREND ANALYSIS DASHBOARD </h3>
