--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</h1>
 			<p>A  SIMPLE Portfolio WEBSITE I DESIGNED</p>
 		</header>
-		<p>Highly skilled and detail-oriented professional with a solid background as a Data Coordinator for 3 years and a Process Analyst for 2 years. Proficient in coordinating, organizing, and managing data to ensure accurate and efficient operations. Demonstrated expertise in analyzing business processes, identifying areas for improvement, and implementing effective solutions. Strong analytical and problem-solving abilities combined with excellent communication and collaboration skills. Proven track record of delivering exceptional results in fast-paced, deadline-driven environments. Committed to achieving operational excellence through data-driven insights and process optimization.</p>
+		<p>As an ambitious individual, I strive to secure a new and challenging role within the data-related field. With a strong organizational background, effective communication skills, and comprehensive collaboration abilities, I am determined to build a successful career and contribute to advancements in this field. Conducted quality assurance checks on data outputs to ensure consistency and compliance with standards. Participated in team meetings, providing input and actively contributing to project discussions.</p>
 		<ul class="actions">
 			<li><a href="https://www.linkedin.com/in/emmanueladeyera/" class="button big">VIEW MY LINKEDIN</a></li>
 		</ul>
@@ -98,7 +98,7 @@
 		<article>
 			<a href="https://github.com/sheyikvngjr/EPL-2022-2023/blob/main/EPL%202022%202023%20(1).ipynb" class="image"><img src="images/QW.jpg" alt="" /></a>
 			<h3>EXPLORATORY ANALYSIS ON ENGLISH PREMIER LEAGUE 2022/2023 </h3>
-			<p> Step 1: Importing Necessary Libraries, Step 2: Loading the Dataset, Step 3: Exploratory Data Analysis (EDA), Step 4: Data Visualization, Step 5: Calculating Winning Percentages, Step 7: Winning and Losing Streaks, Step 8: Referee Analysis, Step 9: Creating a League Table, Step 10: Displaying the League Table 
+			<p> Analyzed the English Premier League 2022/2023 season, including data import, EDA, visualization, winning percentages, streak analysis, referee assessment, league table creation, and results display. 
 				 
 			 </p>
 			<ul class="actions">
@@ -110,11 +110,22 @@
 		<article>
 			<a href="https://github.com/sheyikvngjr/FAKE-NEWS-DETECTION-USING-MACHINE-LEARNING/blob/main/SEYI_Fake%20news_detection.ipynb" class="image"><img src="images/pic01.jpg" alt="" /></a>
 			<h3>FAKE NEWS DETECTION USING PASSIVE CLASSIFIER</h3>
-			<p>Using Jupyer NoteBook, I built a TFIDFVECTORIZER on my dataset. Then initialize a passive aggressive classifier and fit the model, I also compare all other classifiers to see the best accuracy. In the end the accuracy score and  confusion matrix tell us how well our model fares </p>
+			<p>I developed a high-accuracy fake news detection system using supervised machine learning with a Passive-Aggressive classifier, while also conducting data collection and preprocessing, including web scraping and feature vector generation. This project involved system architecture and design for an effective Fake News Detection.
+
+ </p>
 			<ul class="actions">
 				<li><a href="https://github.com/sheyikvngjr/FAKE-NEWS-DETECTION-USING-MACHINE-LEARNING/blob/main/SEYI_Fake%20news_detection.ipynb" class="button">VIEW PROJECT</a></li>
 			</ul>
 		</article>
+
+		<article>
+										<a href="https://www.novypro.com/project/netflix-5" class="image"><img src="images/p.jpg" alt="" /></a>
+										<h3>NETFLIX  INTERACTIVE DASHBOARD WITH USE OF POWERBI </h3>
+										<p>I retrieved a dataset from Kaggle, imported it into Power BI, and then performed data transformation and cleaning to address any data inconsistencies. Afterwards, I extracted the delimiter from the relevant data and utilized various DAX functions to achieve this. Finally, I created a suitable chart to effectively visualize the data. </p>
+										<ul class="actions">
+											<li><a href="https://www.novypro.com/project/netflix-5" class="button">View my project</a></li>
+										</ul>
+									</article>
 
 		<article>
 			<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/HRANALYTICSDASHBOARD_16777761413710/HRANALYTICSDASHBOARD" class="image"><img src="images/H.png" alt="" /></a>
@@ -184,14 +195,7 @@
 											<li><a href="https://www.novypro.com/project/powerbi-28" class="button">View my project</a></li>
 										</ul>
 									</article>
-									<article>
-										<a href="https://www.novypro.com/project/netflix-5" class="image"><img src="images/p.jpg" alt="" /></a>
-										<h3>NETFLIX MOVIE DASHBOARD WITH USE OF POWERBI </h3>
-										<p>I retrieved a dataset from Kaggle, imported it into Power BI, and then performed data transformation and cleaning to address any data inconsistencies. Afterwards, I extracted the delimiter from the relevant data and utilized various DAX functions to achieve this. Finally, I created a suitable chart to effectively visualize the data. </p>
-										<ul class="actions">
-											<li><a href="https://www.novypro.com/project/netflix-5" class="button">View my project</a></li>
-										</ul>
-									</article>
+									
 									<article>
 										<a href="https://public.tableau.com/app/profile/seyi.adeyera/viz/Amazon_16776967115470/Dashboard1" class="image"><img src="images/ama.png" alt="" /></a>
 										<h3>Amazon Sales Dashboard </h3>
@@ -209,7 +213,7 @@
 										</ul>
 									</article>
 									<article>
-										<a href="https://www.novypro.com/project/smoking-dataset-in-uk" class="image"><img src="images/pic011.jpg" alt="" /></a>
+										<a href="https://www.novypro.com/project/smoking-dataset-in-uk" class="image"><img src="images/pic011.png" alt="" /></a>
 										<h3>Smoking Dataset in UK</h3>
 										<p>The Power BI report focuses on the smoking dataset in the UK and utilizes various charts to visually represent the data. The dataset closely resembles the UK adult population to some extent. There is a slightly higher proportion of females compared to males within the sample. The majority of participants are married (48%) or single (25.35%). Education-wise, participants either have no formal qualifications (34.65%), have completed GSCE/0 level education (18.21%), or possess higher qualifications such as degrees (15.49%). The ethnic composition of the sample predominantly consists of White individuals (92%), exceeding the proportion reported in the 2021 Census (80%). A significant majority of the sample (three-quarters) does not engage in smoking behaviors, indicating an imbalance in this aspect. The collected sample provides valuable insights into the demographics and exhibits similarities to the UK adult population. The gender distribution suggests a modest gender imbalance, with slightly more females represented. Marital status reveals that a majority are married, followed by single individuals. The educational qualifications showcase a notable portion without formal qualifications, a significant percentage with GSCE/0 level education, and a considerable proportion with higher qualifications. The ethnic composition largely aligns with the White population. Notably, the distribution of smoking behaviors within the sample indicates a substantial majority of non-smokers. These insights underscore the importance of considering the sample composition when interpreting findings related to smoking behaviors. </p>
 										<ul class="actions">
